--- a/cowWeight.css
+++ b/cowWeight.css
@@ -8,7 +8,9 @@
     display: flex;
     justify-content: center;  /* Horizontal center */
     align-items: center;      /* Vertical center */
+
 }
+
 
 section#cowWeight-mitter {
     
@@ -30,9 +32,17 @@ section#cowWeight-mitter::before {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100%; 
     background-color: rgba(0, 0, 0, 0.5); /* black overlay with 50% opacity */
     z-index: -1; /* keep it behind the content */
+}
+
+section#cowWeight-mitter #cow-map{
+    
+}
+section#cowWeight-mitter #cow-map img {
+    display: block;
+    margin: auto;
 }
 
 .cowMitter-ttl h1 {
